finished notebooks story

--- a/3. Model Evaluation.ipynb
+++ b/3. Model Evaluation.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Evaluation and Serving of the LSTM with Attention, Improved Performance in Production and Edge Cases\n",
-    "This notebook is part 3 of the series, Ultimate-ai-challenge. It is the most fun notebook, because it detects the model failures, and improves the model performance by using chatgpt :). Such distillation approaches are appearning in blogs. After tuning hyperparameters in part 2, I demonstrate the process of evaluating, and serving an LSTM model with attention for intent classification on the ATIS dataset. I evaluate the model using different metrics \n",
+    "This notebook is part 3 of the series, Ultimate-ai-challenge. It is the most fun notebook, because it detects the model failures, and improves the model performance by using chatgpt. Such distillation approaches are appearning in blogs.\n",
+    "\n",
+    "I continue: after tuning hyperparameters in part 2, I demonstrate the process of evaluating, and serving an LSTM model with attention for intent classification on the ATIS dataset. I evaluate the model using different metrics \n",
     "1. Accuracy\n",
     "2. Precision\n",
     "3. Recall\n",
