finished notebooks story

--- a/3. Model Evaluation.ipynb
+++ b/3. Model Evaluation.ipynb
@@ -82,7 +82,7 @@
     }
    },
    "source": [
-    "#### Load the tokenized and test datasets"
+    "#### Load the tokenizers and test datasets"
    ]
   },
   {
@@ -257,6 +257,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba2b22a3-3bbe-4d94-995d-32ed6a8ca8f5",
+   "metadata": {},
+   "source": [
+    "One can make interesting observations about class distributions and prediction failures from confusion matrix. Let's discuss laters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "67345e5e",
    "metadata": {
     "collapsed": false,
@@ -392,23 +400,30 @@
    },
    "source": [
     "#### Serve the model for prediction**\n",
+    "\n",
     "1. **Confidence Score Analysis** :\n",
     "Confidence Distribution: Analyze the distribution of confidence scores for predictions. A well-performing model should generally have higher confidence scores.\n",
     "Threshold Analysis: Determine how varying confidence thresholds affect the number of predicted intents. A stable model will show a consistent pattern in the distribution of predictions above certain confidence levels.\n",
+    "\n",
     "2. **Error Analysis**\n",
     "Manual Review: Randomly sample a set of predictions and manually review them. This can provide qualitative insights into types of errors (e.g., systematic errors, rare cases).\n",
     "Consistency Check: For applications with user feedback loops (like chatbots), monitor user actions following the model's response. Frequent user corrections or negative feedback can indicate issues.\n",
+    "\n",
     "3. **Out-of-Distribution (OOD) Detection**\n",
     "OOD Samples: Use a separate dataset that the model hasn't seen, preferably containing out-of-distribution samples. Measure how the model's confidence scores differ on these samples.\n",
     "OOD Metrics: Evaluate using metrics like Area Under the Receiver Operating Characteristic curve (AUROC) for OOD detection efficiency.\n",
+    "\n",
     "4. **Comparative Analysis**\n",
     "A/B Testing: If possible, implement A/B testing where different models serve different user segments. Monitor indirect metrics like user engagement, session length, or conversion rates.\n",
     "Sequential Testing: Periodically switch between models in production and monitor overall system performance metrics.\n",
+    "\n",
     "5. **Model Drift Monitoring**\n",
     "Data Drift: Monitor for shifts in input data distribution over time. Significant drifts can suggest that the model might be becoming less effective.\n",
-    "Prediction Drift: Monitor changes in the distribution of the model's predictions. A sudden shift could indicate that the model's performance is degrading.\n",
+    "rediction Drift: Monitor changes in the distribution of the model's predictions. A sudden shift could indicate that the model's performance is degrading.\n",
+    "\n",
     "6. **Feedback Loop**\n",
     "User Feedback: Implement a mechanism for users to provide feedback on predictions. This can be direct (like thumbs up/down) or inferred (like user ignoring the model's suggestion).\n",
+    "\n",
     "7. **Additional Metrics**\n",
     "Latency: Measure the response time. A slower model might impact user experience negatively.\n",
     "Resource Utilization: Monitor CPU, memory, and other resource usages. An efficient model should balance accuracy with resource consumption."
