finished notebooks story

--- a/3. Model Evaluation.ipynb
+++ b/3. Model Evaluation.ipynb
@@ -399,7 +399,7 @@
     }
    },
    "source": [
-    "#### Serve the model for prediction**\n",
+    "#### Serve the model for prediction , Evaluate Production Performance**\n",
     "\n",
     "1. **Confidence Score Analysis** :\n",
     "Confidence Distribution: Analyze the distribution of confidence scores for predictions. A well-performing model should generally have higher confidence scores.\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "d2b04c98-73c9-454c-bb89-c698702dafc1",
    "metadata": {
     "ExecuteTime": {
@@ -704,7 +704,8 @@
    "id": "ec6fbf76-19fd-44a8-ab86-a0fa638e81f9",
    "metadata": {},
    "source": [
-    "### CHECK THE ACTUAL PREDICTIONS ON OOD AND OOD_TEST"
+    "### CHECK THE ACTUAL PREDICTIONS ON OOD AND OOD_TEST,\n",
+    "As you can see above, the confidence for OOS samples is poor. Below, all non related samples are labelled and not assigned unknown buckets. This is poor performance."
    ]
   },
   {
@@ -978,6 +979,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70d0b393-9b32-49c5-9700-cfc065e22a9c",
+   "metadata": {},
+   "source": [
+    "### Confidence and Predictions Improved for OODs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "0a002d14-bdbb-4f31-a863-e84751d5274b",
@@ -1046,7 +1055,7 @@
    "id": "a3ea71cf-5a64-4226-8e1d-cc8f0a9165a7",
    "metadata": {},
    "source": [
-    "## Check close call messages and model responses\n",
+    "## Check close call/Edge messages and model responses\n",
     "Check \"I want to book a hotel room near Miami Beach\" by both Models"
    ]
   },
