finished notebooks story

--- a/4. Model Abstraction, Transformers .ipynb
+++ b/4. Model Abstraction, Transformers .ipynb
@@ -14,7 +14,7 @@
     "\n",
     "#### This notebook has two parts. \n",
     "1. using Hugging Face Transformer\n",
-    "2. Building a Transformer like Interface for Models (Own Tokenizer and Model Abstraction), with traine, eval and predict functions that can be used to trained any model.\n",
+    "2. Demonstarion of a Transformer like Interface for Models (Own Tokenizer and Model Abstraction), with train, eval and predict functions that can be used to trained any model.\n",
     "\n",
     "## Transformer, Bert's Intent Classification\n",
     "I trained and fine tuned a language model with Attention Mechanism previously. However, I have not made it generalized. Let's use Hugging face transformers. \n",
