finished notebooks story

--- a/3. Model Evaluation.ipynb
+++ b/3. Model Evaluation.ipynb
@@ -994,7 +994,8 @@
     "ExecuteTime": {
      "end_time": "2023-11-22T20:30:27.572903Z",
      "start_time": "2023-11-22T20:30:27.460312Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
