--- a/4. Model Abstraction, Transformers .ipynb
+++ b/4. Model Abstraction, Transformers .ipynb
@@ -81,7 +81,7 @@
    },
    "source": [
     " ## Data Loading\n",
-    " I will use the training set to train the model and the test set to evaluate the model. I will use the pretrained Bert tokenizer and model from HuggingFace. The tokenizer will convert the text into tokens that the model can understand. The model will be trained to classify the intent of the text. I will use the BertForSequenceClassification model, which is a pretrained Bert model with a single linear classification layer on top. This model can be used for sequence classification tasks like ours."
+    " I will use the pretrained Bert tokenizer. The tokenizer will convert the text into tokens that the model can understand. The model will be trained to classify the intent of the text. I will use the BertForSequenceClassification model, which is a pretrained Bert model with a single linear classification layer on top. This model can be used for sequence classification tasks like ours."
    ]
   },
   {
