finished notebooks story

--- a/4. Model Abstraction, Transformers .ipynb
+++ b/4. Model Abstraction, Transformers .ipynb
@@ -491,7 +491,7 @@
    "source": [
     "### Get data Tensors and Loaders in One go\n",
     "\n",
-    "Our Tensor Data Sets are specialized. A tupple of two tensors, first one giving the sequences, and and the 2nd one the labels"
+    "I use a Tupled Tensor Data Set, (two Tensors) first one giving the sequences, and and the 2nd one the labels"
    ]
   },
   {
