--- a/4. Model Abstraction, Transformers .ipynb
+++ b/4. Model Abstraction, Transformers .ipynb
@@ -16,7 +16,7 @@
     "1. using Hugging Face Transformer\n",
     "2. Demonstarion of a Transformer like Interface for Models (Own Tokenizer and Model Abstraction), with train, eval and predict functions that can be used to trained any model.\n",
     "\n",
-    "## Transformer, Bert's Intent Classification\n",
+    "## 4.1 Transformer, Bert's Intent Classification\n",
     "I trained and fine tuned a language model with Attention Mechanism previously. However, I have not made it generalized. Let's use Hugging face transformers. \n",
     "An example Intent Classification model using BERT and HuggingFace Transformers.\n",
     "Steps:\n",
@@ -417,8 +417,8 @@
    "id": "f83612db-b574-429c-9e79-6e86289c48c8",
    "metadata": {},
    "source": [
-    "# Building a generic Hugging Face like Interface\n",
-    "Hugging face has its own tokenizer and training interface that abstracts pytorch implementation. I show a similar approach. Classes are implemented in machine_learning directory"
+    "# 4.2 Implementaion of Abstraction ELSTM+Attention\n",
+    "Hugging face has its own tokenizer and training interface that abstracts pytorch implementation. I implement a similar approach. Classes are implemented in machine_learning directory"
    ]
   },
   {
