--- a/4. Model Abstraction, Transformers .ipynb
+++ b/4. Model Abstraction, Transformers .ipynb
@@ -418,7 +418,7 @@
    "metadata": {},
    "source": [
     "# 4.2 Implementaion of Abstraction ELSTM+Attention\n",
-    "Hugging face has its own tokenizer and training interface that abstracts pytorch implementation. I implement a similar approach. Classes are implemented in machine_learning directory"
+    "Hugging face has its own tokenizer and training interface that abstracts pytorch implementation. I implement a similar approach. I provide an intercae that encapsulates pytorch and just exposes the parameters. Classes are implemented in machine_learning directory"
    ]
   },
   {
@@ -436,7 +436,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    " import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from machine_learning.IntentTokenizer import IntentTokenizer\n",
@@ -710,8 +710,8 @@
     "# Conclusion\n",
     "In the Notebooks, I have accomplished the following:\n",
     "1. Show how to train a simple model and add Attention Mechanism to improve accuracy\n",
-    "2. Building a better model through hyper parameterization and Parameter Logging\n",
-    "3. Model Management, Registry, and Experiment Management. Very important parts of Machine Learning Engineering\n",
+    "2. Building a better model through hyper parameter selection and parameter logging\n",
+    "3. Model Management, Registry, and Experiment Management. Very important parts of MLOPs and Machine Learning Engineering\n",
     "4. Model Evaluation, on test data and performance during production time. Confidence Scores and Performance Improvment by using a distillation approach (using gpt4 to create OOS data and fine tune our best model). Improve production accuracy and performance\n",
     "5. Using Hugging Face Pretrained Transformers model. Fine tuning on Atis Data Set\n",
     "6. Building a Transfomer like Abstract Interface to ELSTM with Attention Model, i.e. Hide Pytorch and Only allow parameters to pass through (code in machine_learning folder)\n",
