finished notebooks story

--- a/4. Model Abstraction, Transformers .ipynb
+++ b/4. Model Abstraction, Transformers .ipynb
@@ -710,9 +710,9 @@
     "# Conclusion\n",
     "In the Notebooks, I have accomplished the following:\n",
     "1. Show how to train a simple model and add Attention Mechanism to improve accuracy\n",
-    "2. Building a better model through hyper parameter selection and parameter logging\n",
+    "2. Building a better model through cross validation based hyper parameter selection and parameter logging.\n",
     "3. Model Management, Registry, and Experiment Management. Very important parts of MLOPs and Machine Learning Engineering\n",
-    "4. Model Evaluation, on test data and performance during production time. Confidence Scores and Performance Improvment by using a distillation approach (using gpt4 to create OOS data and fine tune our best model). Improve production accuracy and performance\n",
+    "4. Model Evaluation, on test data and performance during production time. Confidence Scores and Performance Improvment by using a distillation approach (using gpt4 to create OOS data and fine tune the best model choosen through hyperparameter selection). Improve production accuracy and performance\n",
     "5. Using Hugging Face Pretrained Transformers model. Fine tuning on Atis Data Set\n",
     "6. Building a Transfomer like Abstract Interface to ELSTM with Attention Model, i.e. Hide Pytorch and Only allow parameters to pass through (code in machine_learning folder)\n",
     "\n",
