--- a/2. Hyperparameter Optimization.ipynb
+++ b/2. Hyperparameter Optimization.ipynb
@@ -846,87 +846,226 @@
     }
    },
    "source": [
-    "## Best Model Training and Evaluation\n",
+    "## Best Model Training and Evaluation (Saving, Reloading the best model, through optuna or mlflow)\n",
     "Once I find the best set of hyper parameters, you can open mlflow on tracking uri, e.g. in my case , I set http://127.0.0.1:1234. Also if you install optuna-dashboard, you can see very nice visualizations and get very detailed insights on hyperparameter space, their importance, and why some combinations work more than others. I invite to try it. Tune the best model with a larger number of epochs and evaluate it on the test set. You can reload an optuna study from its' db later to get the best parameters and train a model."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
+   "source": [
+    "### Train the best model\n",
+    "Let's say that you have saved an optuna study and you want to make use of it. You feel that the number of epochs were not enough and you want to train the best model with more epochs. Or you want save the model initialization parameters so that you can load the model initial state later and use it along with the saved state dictionary. You can do the following:"
+   ],
    "metadata": {
-    "is_executing": true
-   },
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "warnings.filterwarnings(\"ignore\", module=\"mlflow.*\")\n",
+    "import optuna\n",
+    "import logging\n",
     "# Reload Optuna Study to get the best parameters\n",
     "study_name = \"IntentClassifierLSTMWithAttention_small\";\n",
     "storage_name = \"sqlite:///{}.db\".format(study_name);\n",
     "optuna.logging.get_logger(\"optuna\").addHandler(logging.StreamHandler(sys.stdout));\n",
     "study = optuna.create_study(study_name=study_name, storage=storage_name,load_if_exists=True,direction=\"maximize\");\n",
-    "best_trial = study.best_trial;"
-   ]
+    "best_trial = study.best_trial;\n",
+    "print(f'Best trial: score {best_trial.value:.4f},\\nparams {best_trial.params}')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10], Loss: 1.0025, Accuracy: 0.8019\n",
-      "Epoch [2/10], Loss: 0.3451, Accuracy: 0.9219\n",
-      "Epoch [3/10], Loss: 0.1937, Accuracy: 0.9534\n",
-      "Epoch [4/10], Loss: 0.1366, Accuracy: 0.9685\n",
-      "Epoch [5/10], Loss: 0.0896, Accuracy: 0.9773\n",
-      "Epoch [6/10], Loss: 0.0984, Accuracy: 0.9750\n",
-      "Epoch [7/10], Loss: 0.0655, Accuracy: 0.9838\n",
-      "Epoch [8/10], Loss: 0.0442, Accuracy: 0.9877\n",
-      "Epoch [9/10], Loss: 0.0570, Accuracy: 0.9868\n",
-      "Epoch [10/10], Loss: 0.0455, Accuracy: 0.9881\n",
-      "Test Loss: 0.3156\n",
-      "Test Accuracy: 0.9588\n",
-      "Test Accuracy: 0.9588\n"
+      "Epoch [1/20], Loss: 0.9159, Accuracy: 0.8150\n",
+      "Epoch [2/20], Loss: 0.3121, Accuracy: 0.9287\n",
+      "Epoch [3/20], Loss: 0.1773, Accuracy: 0.9584\n",
+      "Epoch [4/20], Loss: 0.1227, Accuracy: 0.9699\n",
+      "Epoch [5/20], Loss: 0.1074, Accuracy: 0.9756\n",
+      "Epoch [6/20], Loss: 0.0770, Accuracy: 0.9826\n",
+      "Epoch [7/20], Loss: 0.0585, Accuracy: 0.9854\n",
+      "Epoch [8/20], Loss: 0.0649, Accuracy: 0.9856\n",
+      "Epoch [9/20], Loss: 0.0713, Accuracy: 0.9854\n",
+      "Epoch [10/20], Loss: 0.0855, Accuracy: 0.9820\n",
+      "Epoch [11/20], Loss: 0.0383, Accuracy: 0.9922\n",
+      "Epoch [12/20], Loss: 0.0343, Accuracy: 0.9913\n",
+      "Epoch [13/20], Loss: 0.0143, Accuracy: 0.9964\n",
+      "Epoch [14/20], Loss: 0.0180, Accuracy: 0.9964\n",
+      "Epoch [15/20], Loss: 0.0167, Accuracy: 0.9966\n",
+      "Epoch [16/20], Loss: 0.0201, Accuracy: 0.9955\n",
+      "Epoch [17/20], Loss: 0.0311, Accuracy: 0.9926\n",
+      "Epoch [18/20], Loss: 0.0331, Accuracy: 0.9924\n",
+      "Epoch [19/20], Loss: 0.0629, Accuracy: 0.9854\n",
+      "Epoch [20/20], Loss: 0.0247, Accuracy: 0.9932\n",
+      "Test Loss: 0.4049\n",
+      "Test Accuracy: 0.9424\n",
+      "Test Accuracy: 0.9424\n"
      ]
     }
    ],
    "source": [
-    "# Train the model using best parameters\n",
+    "### Save , Load and Or train the best model further\n",
+    "from machine_learning.IntentTokenizer import IntentTokenizer\n",
+    "device=torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "from machine_learning.IntentClassifierLSTMWithAttention import IntentClassifierLSTMWithAttention\n",
+    "from machine_learning.model_utils import train, evaluate, predict\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "train_df = pd.read_csv('data/atis/train.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
+    "ood_df=pd.read_csv('data/atis/ood.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
+    "train_df=pd.concat([train_df,ood_df])\n",
+    "test_df = pd.read_csv('data/atis/test.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
+    "\n",
+    "tokenizer = IntentTokenizer(train_df)\n",
+    "\n",
+    "train_data = tokenizer.process_data(train_df, device=device)\n",
+    "test_data = tokenizer.process_data(test_df, device=device)\n",
+    "batch_size = 32\n",
+    "train_loader = DataLoader(train_data, shuffle=True, batch_size=batch_size)\n",
+    "test_loader = DataLoader(test_data, shuffle=True, batch_size=batch_size)\n",
+    "\n",
+    "# define constants and hyperparameters\n",
+    "num_epochs = 20\n",
     "model = IntentClassifierLSTMWithAttention(\n",
-    "    vocab_size,\n",
-    "    best_trial.params['embedding_dim'],\n",
-    "    best_trial.params['hidden_dim'],\n",
-    "    output_dim,\n",
-    "    best_trial.params['dropout_rate']\n",
+    "    vocab_size=len(tokenizer.word2idx)+1,\n",
+    "    embedding_dim=best_trial.params['embedding_dim'],\n",
+    "    hidden_dim=best_trial.params['hidden_dim'],\n",
+    "    output_dim=len(tokenizer.le.classes_),\n",
+    "    dropout_rate=best_trial.params['dropout_rate']\n",
     ").to(device)\n",
     "\n",
     "optimizer = optim.Adam(model.parameters(), lr=best_trial.params['lr'],\n",
     "                       weight_decay=best_trial.params['weight_decay'])\n",
-    "train_loss = train(model, optimizer, nn.CrossEntropyLoss(), train_loader, 10)\n",
+    "train_loss = train(model, optimizer, nn.CrossEntropyLoss(), train_loader, num_epochs)\n",
     "test_accuracy = evaluate(model, nn.CrossEntropyLoss(), test_loader, data_type=\"Test\")\n",
-    "print(f'Test Accuracy: {test_accuracy:.4f}')"
-   ]
+    "print(f'Test Accuracy: {test_accuracy:.4f}')\n",
+    "model.save_config_file(f\"config/{study_name}.json\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-23T13:15:32.076004Z",
+     "start_time": "2023-11-23T13:14:46.772266Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(),f\"models/{study_name}_state_dict.pth\")\n",
+    "torch.save(model, f\"models/{study_name}.pth\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-23T13:15:50.847625Z",
+     "start_time": "2023-11-23T13:15:50.814611Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<All keys matched successfully>"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model=IntentClassifierLSTMWithAttention.from_config_file(f\"config/{study_name}.json\").to(device)\n",
+    "model.load_state_dict(torch.load(f\"models/{study_name}_state_dict.pth\"))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-23T13:18:08.254071Z",
+     "start_time": "2023-11-23T13:18:08.231892Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Model trained, Response=airfare']\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_str = \"how much do you charge for a flight to New York\"\n",
+    "\n",
+    "# Creating a DataFrame with the query string\n",
+    "query = pd.DataFrame([query_str], columns=['text'])\n",
+    "print(\"Model trained, Response=\" + predict(model, query, tokenizer, device))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-23T13:19:37.702666Z",
+     "start_time": "2023-11-23T13:19:37.681056Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Model trained, Response=<unknown>']\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_str = \"I want to book a hotel in New York\"\n",
+    "\n",
+    "# Creating a DataFrame with the query string\n",
+    "query = pd.DataFrame([query_str], columns=['text'])\n",
+    "print(\"Model trained, Response=\" + predict(model, query, tokenizer, device))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-23T13:19:07.613815Z",
+     "start_time": "2023-11-23T13:19:07.570636Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
    "source": [
     "## Visualize the results\n",
     "Optuna provides a number of visualizations to analyze the results of the hyperparameter tuning experiment. I use these visualizations to analyze the results of the hyperparameter tuning experiment."
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -1084,9 +1223,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:miniforge3-py3910]",
+   "name": "python3",
    "language": "python",
-   "name": "conda-env-miniforge3-py3910-py"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
