dynamic model initiation through class name on runtime working for different devices

--- a/2. Hyperparameter Optimization.ipynb
+++ b/2. Hyperparameter Optimization.ipynb
@@ -862,8 +862,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2023-11-23 16:25:14,000] Using an existing study with name 'IntentClassifierLSTMWithAttention_small' instead of creating a new one.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using an existing study with name 'IntentClassifierLSTMWithAttention_small' instead of creating a new one.\n",
+      "Best trial: score 0.9903,\n",
+      "params {'lr': 0.0026138818501543195, 'hidden_dim': 256, 'embedding_dim': 64, 'dropout_rate': 0.10368236220109026, 'weight_decay': 1.4377486575365003e-05}\n"
+     ]
+    }
+   ],
    "source": [
     "import optuna\n",
     "import logging\n",
@@ -876,47 +893,59 @@
     "print(f'Best trial: score {best_trial.value:.4f},\\nparams {best_trial.params}')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-23T15:25:14.014658Z",
+     "start_time": "2023-11-23T15:25:13.687717Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/20], Loss: 0.9159, Accuracy: 0.8150\n",
-      "Epoch [2/20], Loss: 0.3121, Accuracy: 0.9287\n",
-      "Epoch [3/20], Loss: 0.1773, Accuracy: 0.9584\n",
-      "Epoch [4/20], Loss: 0.1227, Accuracy: 0.9699\n",
-      "Epoch [5/20], Loss: 0.1074, Accuracy: 0.9756\n",
-      "Epoch [6/20], Loss: 0.0770, Accuracy: 0.9826\n",
-      "Epoch [7/20], Loss: 0.0585, Accuracy: 0.9854\n",
-      "Epoch [8/20], Loss: 0.0649, Accuracy: 0.9856\n",
-      "Epoch [9/20], Loss: 0.0713, Accuracy: 0.9854\n",
-      "Epoch [10/20], Loss: 0.0855, Accuracy: 0.9820\n",
-      "Epoch [11/20], Loss: 0.0383, Accuracy: 0.9922\n",
-      "Epoch [12/20], Loss: 0.0343, Accuracy: 0.9913\n",
-      "Epoch [13/20], Loss: 0.0143, Accuracy: 0.9964\n",
-      "Epoch [14/20], Loss: 0.0180, Accuracy: 0.9964\n",
-      "Epoch [15/20], Loss: 0.0167, Accuracy: 0.9966\n",
-      "Epoch [16/20], Loss: 0.0201, Accuracy: 0.9955\n",
-      "Epoch [17/20], Loss: 0.0311, Accuracy: 0.9926\n",
-      "Epoch [18/20], Loss: 0.0331, Accuracy: 0.9924\n",
-      "Epoch [19/20], Loss: 0.0629, Accuracy: 0.9854\n",
-      "Epoch [20/20], Loss: 0.0247, Accuracy: 0.9932\n",
-      "Test Loss: 0.4049\n",
-      "Test Accuracy: 0.9424\n",
-      "Test Accuracy: 0.9424\n"
+      "Epoch [1/20], Loss: 0.9004, Accuracy: 0.8345\n",
+      "Epoch [2/20], Loss: 0.2586, Accuracy: 0.9381\n",
+      "Epoch [3/20], Loss: 0.1812, Accuracy: 0.9593\n",
+      "Epoch [4/20], Loss: 0.1018, Accuracy: 0.9748\n",
+      "Epoch [5/20], Loss: 0.1053, Accuracy: 0.9728\n",
+      "Epoch [6/20], Loss: 0.0899, Accuracy: 0.9779\n",
+      "Epoch [7/20], Loss: 0.0774, Accuracy: 0.9826\n",
+      "Epoch [8/20], Loss: 0.0425, Accuracy: 0.9905\n",
+      "Epoch [9/20], Loss: 0.0340, Accuracy: 0.9911\n",
+      "Epoch [10/20], Loss: 0.0336, Accuracy: 0.9909\n",
+      "Epoch [11/20], Loss: 0.0365, Accuracy: 0.9911\n",
+      "Epoch [12/20], Loss: 0.0327, Accuracy: 0.9917\n",
+      "Epoch [13/20], Loss: 0.0402, Accuracy: 0.9902\n",
+      "Epoch [14/20], Loss: 0.0576, Accuracy: 0.9852\n",
+      "Epoch [15/20], Loss: 0.0185, Accuracy: 0.9964\n",
+      "Epoch [16/20], Loss: 0.0174, Accuracy: 0.9964\n",
+      "Epoch [17/20], Loss: 0.0152, Accuracy: 0.9958\n",
+      "Epoch [18/20], Loss: 0.0075, Accuracy: 0.9985\n",
+      "Epoch [19/20], Loss: 0.0282, Accuracy: 0.9938\n",
+      "Epoch [20/20], Loss: 0.0206, Accuracy: 0.9949\n",
+      "Test Loss: 0.2869\n",
+      "Test Accuracy: 0.9600\n",
+      "Test Accuracy: 0.9600\n",
+      "class_name=IntentClassifierLSTMWithAttention\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ahmedjawad/miniforge3/envs/py3910/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
      ]
     }
    ],
    "source": [
     "### Save , Load and Or train the best model further\n",
     "from machine_learning.IntentTokenizer import IntentTokenizer\n",
-    "device=torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
     "from machine_learning.IntentClassifierLSTMWithAttention import IntentClassifierLSTMWithAttention\n",
     "from machine_learning.model_utils import train, evaluate, predict\n",
     "import torch.nn as nn\n",
@@ -924,12 +953,15 @@
     "import pandas as pd\n",
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
+    "\n",
+    "device=torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "\n",
     "train_df = pd.read_csv('data/atis/train.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
     "ood_df=pd.read_csv('data/atis/ood.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
     "train_df=pd.concat([train_df,ood_df])\n",
     "test_df = pd.read_csv('data/atis/test.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
     "\n",
-    "tokenizer = IntentTokenizer(train_df)\n",
+    "tokenizer = IntentTokenizer(train_df,5000)\n",
     "\n",
     "train_data = tokenizer.process_data(train_df, device=device)\n",
     "test_data = tokenizer.process_data(test_df, device=device)\n",
@@ -952,60 +984,22 @@
     "train_loss = train(model, optimizer, nn.CrossEntropyLoss(), train_loader, num_epochs)\n",
     "test_accuracy = evaluate(model, nn.CrossEntropyLoss(), test_loader, data_type=\"Test\")\n",
     "print(f'Test Accuracy: {test_accuracy:.4f}')\n",
-    "model.save_config_file(f\"config/{study_name}.json\")"
+    "class_name=model.__class__.__name__\n",
+    "print(f\"class_name={class_name}\")\n",
+    "model.save_config_file(f\"config/{class_name}.json\")\n",
+    "torch.save(model.state_dict(),f\"models/{class_name}_state_dict.pth\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T13:15:32.076004Z",
-     "start_time": "2023-11-23T13:14:46.772266Z"
+     "end_time": "2023-11-23T15:26:05.692919Z",
+     "start_time": "2023-11-23T15:25:16.864243Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [],
-   "source": [
-    "torch.save(model.state_dict(),f\"models/{study_name}_state_dict.pth\")\n",
-    "torch.save(model, f\"models/{study_name}.pth\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T13:15:50.847625Z",
-     "start_time": "2023-11-23T13:15:50.814611Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "<All keys matched successfully>"
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model=IntentClassifierLSTMWithAttention.from_config_file(f\"config/{study_name}.json\").to(device)\n",
-    "model.load_state_dict(torch.load(f\"models/{study_name}_state_dict.pth\"))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-23T13:18:08.254071Z",
-     "start_time": "2023-11-23T13:18:08.231892Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -1025,8 +1019,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-23T13:19:37.702666Z",
-     "start_time": "2023-11-23T13:19:37.681056Z"
+     "end_time": "2023-11-23T15:33:01.526866Z",
+     "start_time": "2023-11-23T15:33:00.989440Z"
     }
    }
   },
