nearly final state

--- a/1.Simple Model Training.ipynb
+++ b/1.Simple Model Training.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "The dataset contains 5,047 sentences belonging to 26 intents (it is ATIS from Kaggle). The sentences are queries from the ATIS (Airline Travel Information System) domain, and the intents are things like \"atis_flight\", \"atis_airfare\", \"atis_ground_service\", etc. The dataset is split into a training set and a test set.\n",
     "\n",
-    "In this section, I will tokenize the text and build a vocabulary. I will also encode the labels as numerical values. This will help build an intent classifier model that an be used for chatbots in any domain and language\n",
+    "In this section, I will tokenize the text and build a vocabulary. I will also encode the labels as numerical values. This will help build an intent classifier model that can be used for chatbots in any domain and language\n",
     "1. Tokenize and Build Vocabulary\n",
     "2. Get the Indexed and Padded Sequences as Tensors\n",
     "\n",
