images and paths corrected in notebooks

--- a/machine_learning/notebooks/1. Model Training.ipynb
+++ b/machine_learning/notebooks/1. Model Training.ipynb
@@ -17,6 +17,30 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "42a4260b-e674-414f-87a9-175d6c76999c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Working Directory: /Users/ahmedjawad/Documents/JobSearch/UltimateAIChallenge/ultimate_aiv2\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Important Note; carefully set the project Root, so relative class imports work.\n",
+    "import os\n",
+    "marker = '.git'  # Replace with your unique marker file or directory\n",
+    "while not os.path.exists(marker):\n",
+    "    os.chdir('..')\n",
+    "# Verify the current working directory\n",
+    "print(\"Current Working Directory:\", os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "fe401331",
    "metadata": {
     "ExecuteTime": {
@@ -31,7 +55,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from collections import Counter\n",
@@ -52,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "648bd5dd-1f83-4e3e-bee6-ef3e5e80fe62",
    "metadata": {
     "ExecuteTime": {
@@ -102,8 +125,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48a0ec15-f40f-4a01-9159-af6b5616c1b9",
+   "metadata": {},
+   "source": [
+    "Befor running this,  make sure that the current working directory is project root"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9ffda9ad-ae5e-4ef9-93bb-400f7ae1e52c",
    "metadata": {
     "ExecuteTime": {
@@ -125,12 +156,12 @@
     }
    ],
    "source": [
-    "from utils import tokenize, build_vocabulary, text_to_indices, encode_labels, convert_and_pad_sequences\n",
+    "from machine_learning.learners.utils import tokenize, build_vocabulary, text_to_indices, encode_labels, convert_and_pad_sequences\n",
     "\n",
     "# Load the training data\n",
-    "train = pd.read_csv(\"data/atis/train.tsv\",sep='\\t', header=None)\n",
+    "train = pd.read_csv(\"data/input/atis/train.tsv\",sep='\\t', header=None)\n",
     "train.columns = [\"text\", \"label\"]\n",
-    "test= pd.read_csv(\"data/atis/test.tsv\",sep='\\t', header=None)\n",
+    "test= pd.read_csv(\"data/input/atis/test.tsv\",sep='\\t', header=None)\n",
     "test.columns = [\"text\", \"label\"]\n",
     "\n",
     "#build vocabulary\n",
@@ -169,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "beb87f36-d2ab-460c-bffe-00ba2b4fbd86",
    "metadata": {
     "ExecuteTime": {
@@ -212,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "878f8cfa",
    "metadata": {
     "ExecuteTime": {
@@ -270,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9958c25f-ca17-4f7c-91a7-4099c5d841a5",
    "metadata": {
     "ExecuteTime": {
@@ -327,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1ee5e703-a7f5-49b4-8cd3-8de90e57c983",
    "metadata": {
     "ExecuteTime": {
@@ -409,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "5af8efc5-d23a-46fe-acdf-eb4f7087d0f2",
    "metadata": {
     "ExecuteTime": {
@@ -470,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "98f5a36b",
    "metadata": {
     "ExecuteTime": {
@@ -487,26 +518,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/10], Loss: 1.6400\n",
-      "Epoch [1/10], Accuracy: 0.6744\n",
-      "Epoch [2/10], Loss: 0.6214\n",
-      "Epoch [2/10], Accuracy: 0.8800\n",
-      "Epoch [3/10], Loss: 0.4168\n",
-      "Epoch [3/10], Accuracy: 0.9016\n",
-      "Epoch [4/10], Loss: 0.3034\n",
-      "Epoch [4/10], Accuracy: 0.9256\n",
-      "Epoch [5/10], Loss: 0.2260\n",
-      "Epoch [5/10], Accuracy: 0.9413\n",
-      "Epoch [6/10], Loss: 0.1751\n",
-      "Epoch [6/10], Accuracy: 0.9549\n",
-      "Epoch [7/10], Loss: 0.1641\n",
-      "Epoch [7/10], Accuracy: 0.9534\n",
-      "Epoch [8/10], Loss: 0.1402\n",
-      "Epoch [8/10], Accuracy: 0.9612\n",
-      "Epoch [9/10], Loss: 0.1108\n",
-      "Epoch [9/10], Accuracy: 0.9700\n",
-      "Epoch [10/10], Loss: 0.0971\n",
-      "Epoch [10/10], Accuracy: 0.9724\n"
+      "Epoch [1/10], Loss: 1.6436\n",
+      "Epoch [1/10], Accuracy: 0.6813\n",
+      "Epoch [2/10], Loss: 0.5984\n",
+      "Epoch [2/10], Accuracy: 0.8746\n",
+      "Epoch [3/10], Loss: 0.3949\n",
+      "Epoch [3/10], Accuracy: 0.9057\n",
+      "Epoch [4/10], Loss: 0.2762\n",
+      "Epoch [4/10], Accuracy: 0.9325\n",
+      "Epoch [5/10], Loss: 0.2239\n",
+      "Epoch [5/10], Accuracy: 0.9428\n",
+      "Epoch [6/10], Loss: 0.1804\n",
+      "Epoch [6/10], Accuracy: 0.9527\n",
+      "Epoch [7/10], Loss: 0.1512\n",
+      "Epoch [7/10], Accuracy: 0.9633\n",
+      "Epoch [8/10], Loss: 0.1313\n",
+      "Epoch [8/10], Accuracy: 0.9629\n",
+      "Epoch [9/10], Loss: 0.1272\n",
+      "Epoch [9/10], Accuracy: 0.9629\n",
+      "Epoch [10/10], Loss: 0.1025\n",
+      "Epoch [10/10], Accuracy: 0.9709\n"
      ]
     }
    ],
@@ -561,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "521bdb41",
    "metadata": {
     "ExecuteTime": {
@@ -578,8 +609,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.2919\n",
-      "Test Accuracy: 0.9600\n"
+      "Test Loss: 0.3052\n",
+      "Test Accuracy: 0.9553\n"
      ]
     }
    ],
@@ -621,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0134ba01-9415-4e6a-a524-2e1e1d4ac724",
    "metadata": {
     "ExecuteTime": {
@@ -631,7 +662,7 @@
    },
    "outputs": [],
    "source": [
-    "torch.save(model, 'models/E-LSTMAmodel.pth')"
+    "torch.save(model, 'data/models/E-LSTMAmodel.pth')"
    ]
   },
   {
@@ -644,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "de3ccd1f-03f0-43ea-b23c-390b9bbba0ba",
    "metadata": {
     "ExecuteTime": {
@@ -668,7 +699,7 @@
     }
    ],
    "source": [
-    "model_serve = torch.load('models/E-LSTMAmodel.pth')\n",
+    "model_serve = torch.load('data/models/E-LSTMAmodel.pth')\n",
     "\n",
     "def predict(model, query, max_length):\n",
     "    model.eval()\n",
@@ -687,7 +718,7 @@
     "\n",
     "    # Convert prediction to label\n",
     "    return le.inverse_transform(predicted.data.cpu().numpy())\n",
-    "torch.save(model.state_dict(), 'model_state_dict.pth')\n",
+    "torch.save(model.state_dict(), 'data/models/ELSTM_state_dict.pth')\n",
     "\n",
     "\n",
     "\n",
@@ -697,6 +728,22 @@
     "prediction = predict(model_serve, query,46)\n",
     "print(f\"Predicted label: {prediction}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "429f1aad-2c63-4ae0-92d5-50d1a082c88d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c31176d-c64e-48b3-b9f9-958a28f94b7b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
