--- a/machine_learning/notebooks/4. Model Abstraction, Transformers .ipynb
+++ b/machine_learning/notebooks/4. Model Abstraction, Transformers .ipynb
@@ -31,6 +31,30 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "1066ff52-8bf4-459a-b74d-3d2ff0eb33dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Working Directory: /Users/ahmedjawad/Documents/JobSearch/UltimateAIChallenge/ultimate_aiv2\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Important Note; carefully set the project Root, so relative class imports work.\n",
+    "import os\n",
+    "marker = '.git'  # Replace with your unique marker file or directory that exists in project root\n",
+    "while not os.path.exists(marker):\n",
+    "    os.chdir('..')\n",
+    "# Verify the current working directory\n",
+    "print(\"Current Working Directory:\", os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3ba54bca",
    "metadata": {
     "ExecuteTime": {
@@ -47,16 +71,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['abbreviation' 'aircraft' 'aircraft+flight+flight_no' 'airfare'\n",
-      " 'airfare+flight_time' 'airline' 'airline+flight_no' 'airport' 'capacity'\n",
-      " 'cheapest' 'city' 'distance' 'flight' 'flight+airfare' 'flight_no'\n",
-      " 'flight_time' 'ground_fare' 'ground_service' 'ground_service+ground_fare'\n",
-      " 'meal' 'quantity' 'restriction' '<unknown>']\n",
-      "23\n",
-      "Vocabulary size: 890\n",
-      "Index of the word 'flight': 32\n",
-      "[99, 100, 140, 15, 141, 142, 12, 97]\n",
-      "[1, 93, 86, 3, 4, 5, 28, 64, 3, 68, 23, 260, 265]\n",
       "mps\n"
      ]
     }
@@ -66,11 +80,11 @@
     "from transformers import Trainer, TrainingArguments\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import torch\n",
-    "import config_bert as cfg\n",
+    "import config.config_bert as cfg\n",
     "import warnings\n",
     "from transformers import TrainerCallback\n",
-    "from machine_learning.model_utils import get_or_create_experiment\n",
-    "from machine_learning.IntentTokenizer import IntentTokenizer\n",
+    "from machine_learning.learners.model_utils import get_or_create_experiment\n",
+    "from machine_learning.learners.IntentTokenizer import IntentTokenizer\n",
     "import mlflow\n",
     "import mlflow.pytorch\n",
     "import pandas as pd\n",
@@ -96,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6c74f208",
    "metadata": {
     "ExecuteTime": {
@@ -143,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "6705cecf-4482-45fa-90b0-3d40b639a6ea",
    "metadata": {
     "ExecuteTime": {
@@ -167,8 +181,8 @@
     "        return len(self.labels)\n",
     "\n",
     "# Load data\n",
-    "train_df = pd.read_csv('data/atis/train.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
-    "test_df = pd.read_csv('data/atis/test.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
+    "train_df = pd.read_csv('data/input/atis/train.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
+    "test_df = pd.read_csv('data/input/atis/test.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
     "\n",
     "# Assume the second column is the label and the first column is the text\n",
     "train_texts = train_df[\"text\"].tolist()\n",
@@ -202,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "329965f9-8bad-46aa-b2f3-b1a3ac1630c1",
    "metadata": {
     "ExecuteTime": {
@@ -217,8 +231,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='165' max='870' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [165/870 00:30 < 02:12, 5.30 it/s, Epoch 0.57/3]\n",
+       "      <progress value='870' max='870' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [870/870 03:07, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -230,15 +244,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>50</td>\n",
-       "      <td>2.881000</td>\n",
+       "      <td>3.007600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
-       "      <td>1.733100</td>\n",
+       "      <td>1.654500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>150</td>\n",
-       "      <td>0.854300</td>\n",
+       "      <td>0.935800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>200</td>\n",
+       "      <td>0.681800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>250</td>\n",
+       "      <td>0.415900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>300</td>\n",
+       "      <td>0.310200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>350</td>\n",
+       "      <td>0.225900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>400</td>\n",
+       "      <td>0.186500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>450</td>\n",
+       "      <td>0.146100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>500</td>\n",
+       "      <td>0.147700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>550</td>\n",
+       "      <td>0.092100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>600</td>\n",
+       "      <td>0.105100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>650</td>\n",
+       "      <td>0.090700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>700</td>\n",
+       "      <td>0.086600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>750</td>\n",
+       "      <td>0.076800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>800</td>\n",
+       "      <td>0.096100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>850</td>\n",
+       "      <td>0.021200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -315,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ed9cecb1",
    "metadata": {
     "collapsed": false,
@@ -326,7 +396,7 @@
    },
    "outputs": [],
    "source": [
-    "trainer.save_model('bert-results/final_bert_evaluated')"
+    "trainer.save_model('data/results/bert-results/final_bert_evaluated')"
    ]
   },
   {
@@ -344,10 +414,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d1afde02-e977-4abd-8203-dc873dbe788f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='14' max='14' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [14/14 00:01]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 0.17101609706878662,\n",
+       " 'eval_runtime': 1.2096,\n",
+       " 'eval_samples_per_second': 702.708,\n",
+       " 'eval_steps_per_second': 11.574,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainer.evaluate()"
    ]
@@ -363,17 +466,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6a563561-1604-4bd0-a45a-2e4d8e521676",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: mps\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from machine_learning.IntentTokenizer import IntentTokenizer\n",
-    "from machine_learning.IntentClassifierLSTMWithAttention import IntentClassifierLSTMWithAttention\n",
-    "from machine_learning.model_utils import train, evaluate, predict\n",
+    "from machine_learning.learners.IntentTokenizer import IntentTokenizer\n",
+    "from machine_learning.learners.IntentClassifierLSTMWithAttention import IntentClassifierLSTMWithAttention\n",
+    "from machine_learning.learners.model_utils import train, evaluate, predict\n",
     "from torch.utils.data import DataLoader\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
@@ -382,8 +493,8 @@
     "print(f\"Using device: {device}\")\n",
     "\n",
     "# Load and preprocess the data\n",
-    "train_df = pd.read_csv('data/atis/train.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
-    "test_df = pd.read_csv('data/atis/test.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])"
+    "train_df = pd.read_csv('data/input/atis/train.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])\n",
+    "test_df = pd.read_csv('data/input/atis/test.tsv', sep='\\t', header=None, names=[\"text\", \"label\"])"
    ]
   },
   {
@@ -396,10 +507,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0d9fa6a0-342b-4747-a2f1-b3e0b821deda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inside IntentTokenizer\n",
+      "Actual Vocabulary Size: 890\n",
+      "Encoding labels for the first time and adding unknown class.\n",
+      "Label Encoding: {'abbreviation': 0, 'aircraft': 1, 'aircraft+flight+flight_no': 2, 'airfare': 3, 'airfare+flight_time': 4, 'airline': 5, 'airline+flight_no': 6, 'airport': 7, 'capacity': 8, 'cheapest': 9, 'city': 10, 'distance': 11, 'flight': 12, 'flight+airfare': 13, 'flight_no': 14, 'flight_time': 15, 'ground_fare': 16, 'ground_service': 17, 'ground_service+ground_fare': 18, 'meal': 19, 'quantity': 20, 'restriction': 21, '<unknown>': 22}\n"
+     ]
+    }
+   ],
    "source": [
     "tokenizer = IntentTokenizer(train_df)"
    ]
@@ -416,10 +538,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8331cd3e-861f-4575-95df-0944c07ed696",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training samples: torch.Size([4634, 46])\n",
+      "Number of test samples: torch.Size([850, 30])\n",
+      "Number of training batches: 145\n",
+      "Number of test batches: 27\n"
+     ]
+    }
+   ],
    "source": [
     "# Example usage\n",
     "train_data = tokenizer.process_data(train_df,device=device)\n",
@@ -445,10 +578,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "00421fd7-9909-4da8-86d4-d6dbca069d53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocab Size: 892\n",
+      "Embedding Dim: 64\n",
+      "Hidden Dim: 128\n",
+      "Output Dim: 23\n",
+      "Dropout Rate: 0.4\n",
+      "learning Rate: 0.0013\n",
+      "epochs: 30\n"
+     ]
+    }
+   ],
    "source": [
     "# Define loss function and optimizer\n",
     "loss_function = nn.CrossEntropyLoss()\n",
@@ -483,10 +630,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b6d2d0cb-8ac2-49fb-92fa-73ae346bff47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/30], Loss: 1.4623, Accuracy: 0.6981\n",
+      "Epoch [2/30], Loss: 0.4983, Accuracy: 0.8921\n",
+      "Epoch [3/30], Loss: 0.3534, Accuracy: 0.9128\n",
+      "Epoch [4/30], Loss: 0.2362, Accuracy: 0.9398\n",
+      "Epoch [5/30], Loss: 0.1899, Accuracy: 0.9553\n",
+      "Epoch [6/30], Loss: 0.1579, Accuracy: 0.9605\n",
+      "Epoch [7/30], Loss: 0.1262, Accuracy: 0.9650\n",
+      "Epoch [8/30], Loss: 0.1151, Accuracy: 0.9694\n",
+      "Epoch [9/30], Loss: 0.1045, Accuracy: 0.9711\n",
+      "Epoch [10/30], Loss: 0.1036, Accuracy: 0.9715\n",
+      "Epoch [11/30], Loss: 0.0863, Accuracy: 0.9732\n",
+      "Epoch [12/30], Loss: 0.0871, Accuracy: 0.9750\n",
+      "Epoch [13/30], Loss: 0.0601, Accuracy: 0.9810\n",
+      "Epoch [14/30], Loss: 0.0573, Accuracy: 0.9849\n",
+      "Epoch [15/30], Loss: 0.0596, Accuracy: 0.9849\n",
+      "Epoch [16/30], Loss: 0.0434, Accuracy: 0.9873\n",
+      "Epoch [17/30], Loss: 0.0587, Accuracy: 0.9825\n",
+      "Epoch [18/30], Loss: 0.0517, Accuracy: 0.9849\n",
+      "Epoch [19/30], Loss: 0.0465, Accuracy: 0.9860\n",
+      "Epoch [20/30], Loss: 0.0440, Accuracy: 0.9883\n",
+      "Epoch [21/30], Loss: 0.0308, Accuracy: 0.9899\n",
+      "Epoch [22/30], Loss: 0.0361, Accuracy: 0.9883\n",
+      "Epoch [23/30], Loss: 0.0327, Accuracy: 0.9899\n",
+      "Epoch [24/30], Loss: 0.0365, Accuracy: 0.9892\n",
+      "Epoch [25/30], Loss: 0.0414, Accuracy: 0.9888\n",
+      "Epoch [26/30], Loss: 0.0255, Accuracy: 0.9907\n",
+      "Epoch [27/30], Loss: 0.0208, Accuracy: 0.9942\n",
+      "Epoch [28/30], Loss: 0.0311, Accuracy: 0.9905\n",
+      "Epoch [29/30], Loss: 0.0225, Accuracy: 0.9931\n",
+      "Epoch [30/30], Loss: 0.0253, Accuracy: 0.9916\n",
+      "Test Loss: 0.3691\n",
+      "Test Accuracy: 0.9529\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9529411764705882"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Pick the model and train it. Evaluate the model on the test set.\n",
     "# choose model to train, uncomment the model you want to train and comment the other one\n",
@@ -523,9 +719,9 @@
     "\n",
     "model.save_config_file(f\"config/{class_name}.json\")\n",
     "\n",
-    "torch.save(model.state_dict(),f\"models/{class_name}_state_dict.pth\")\n",
+    "torch.save(model.state_dict(),f\"data/models/{class_name}_state_dict.pth\")\n",
     "\n",
-    "tokenizer.save_state(f\"models/{class_name}_tokenizer.pickle\", f\"models/{class_name}_le.pickle\")`"
+    "tokenizer.save_state(f\"data/models/{class_name}_tokenizer.pickle\", f\"data/models/{class_name}_le.pickle\")`"
    ]
   },
   {
@@ -538,13 +734,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b946f191-fb57-4dc4-8de3-0a9cbe19683e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load the trained model and tokenizer from saved files\n",
-    "from intent_classifier import IntentClassifier\n",
+    "from machine_learning.learners.intent_classifier import IntentClassifier\n",
     "class_name=\"IntentClassifierLSTMWithAttention\"\n",
     "model_serve=IntentClassifier(class_name)\n",
     "model_serve.load(class_name)"
@@ -560,10 +767,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5756d7fa-efef-4d2f-b386-2f572ae9dbf6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted label: [{'label': 'airline', 'confidence': 0.948722243309021}, {'label': 'aircraft', 'confidence': 0.022765884175896645}, {'label': 'airline+flight_no', 'confidence': 0.010119378566741943}]\n"
+     ]
+    }
+   ],
    "source": [
     "# Predict on a query\n",
     "max_query_length = 50\n",
