images and paths corrected in notebooks

--- a/machine_learning/notebooks/2. Hyperparameter Optimization.ipynb
+++ b/machine_learning/notebooks/2. Hyperparameter Optimization.ipynb
@@ -900,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"data/images/plotly_contours.png\" alt=\"Plotly Contours\" title=\"Plotly Contours\"/>"
+    "![Parallel Coordinates](../../data/images/plotly_contours.png)"
    ]
   },
   {
@@ -938,7 +938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"data/images/plot_parallel_coordinate.png\" alt=\"Parallel Coordinates\" title=\"Parallel Coordinates\"/>"
+    "![Parallel Coordinates](../../data/images/plot_parallel_coordinate.png)"
    ]
   },
   {
