images and paths corrected in notebooks

--- a/machine_learning/notebooks/2. Hyperparameter Optimization.ipynb
+++ b/machine_learning/notebooks/2. Hyperparameter Optimization.ipynb
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -893,14 +893,14 @@
     "    width=1600,   # Width of the figure in pixels\n",
     "    height=800   # Height of the figure in pixels\n",
     ")\n",
-    "fig.write_image(\"data/images/plotly_contours.png\") "
+    "fig.write_image(\"machine_learning/notebooks/plotly_contours.png\") "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Parallel Coordinates](../../data/images/plotly_contours.png)"
+    "![Parallel Coordinates](plotly_contours.png)"
    ]
   },
   {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -931,14 +931,14 @@
     "    width=1600,   # Width of the figure in pixels\n",
     "    height=800   # Height of the figure in pixels\n",
     ")\n",
-    "fig.write_image(\"data/images/plot_parallel_coordinate.png\") "
+    "fig.write_image(\"machine_learning/notebooks/plot_parallel_coordinate.png\") "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Parallel Coordinates](../../data/images/plot_parallel_coordinate.png)"
+    "![Parallel Coordinates](plot_parallel_coordinate.png)"
    ]
   },
   {
