working python server.py

--- a/machine_learning/notebooks/3. Model Evaluation.ipynb
+++ b/machine_learning/notebooks/3. Model Evaluation.ipynb
@@ -59,19 +59,7 @@
      "start_time": "2023-11-23T11:55:06.807481Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'machine_learning.learner'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptim\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01moptim\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnn\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmachine_learning\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlearner\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mIntentClassifierLSTMWithAttention\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m IntentClassifierLSTMWithAttention\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01moptuna\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'machine_learning.learner'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from machine_learning.learners.IntentTokenizer import IntentTokenizer\n",
@@ -83,7 +71,7 @@
     "from machine_learning.learners.model_utils import get_or_create_experiment\n",
     "import torch.optim as optim\n",
     "import torch.nn as nn\n",
-    "from machine_learning.learner.IntentClassifierLSTMWithAttention import IntentClassifierLSTMWithAttention\n",
+    "from machine_learning.learners.IntentClassifierLSTMWithAttention import IntentClassifierLSTMWithAttention\n",
     "import torch\n",
     "import optuna\n",
     "import logging\n",
@@ -95,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "15cae25d-0bbe-415a-b5b3-c51c28920692",
    "metadata": {
     "ExecuteTime": {
@@ -103,7 +91,15 @@
      "start_time": "2023-11-23T11:55:07.788622Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: mps\n"
+     ]
+    }
+   ],
    "source": [
     "# Determine the computation device based on availability\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
@@ -126,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2f2d2802-1167-4174-ab57-99e076566c7d",
    "metadata": {
     "ExecuteTime": {
@@ -134,7 +130,19 @@
      "start_time": "2023-11-23T11:55:07.792313Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'intent_classifier'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Specify the model name for loading\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mintent_classifier\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m IntentClassifier\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Load the trained model and tokenizer from saved files\u001b[39;00m\n\u001b[1;32m      4\u001b[0m batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m32\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'intent_classifier'"
+     ]
+    }
+   ],
    "source": [
     "# Specify the model name for loading\n",
     "from intent_classifier import IntentClassifier\n",
